# pdfproc

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml
docs/: conf.py  index.rst
pdfproc/: __init__.py  __main__.py  cli.py
pdfslice/: __init__.py  __main__.py  cli.py  slice.py
tests/: test_cli.py  test_slice.py
