[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pdfslice"
author = "qdd"
author-email = "qdd@eruditorum.dev"
home-page = "https://github.com/qdd-gh/pdfslice"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "attrs",
    "click",
    "PyPDF2",
]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]
doc = [
    "sphinx",
]
dev = [
    "black",
]
