[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pdfproc"
author = "qdd"
author-email = "qdd@eruditorum.dev"
home-page = "https://github.com/qdd-gh/pdfproc"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "attrs",
    "click",
    "PyPDF2",
]
description-file = "README.rst"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]
doc = [
    "sphinx",
]
dev = [
    "black",
]
